# mcp-python-sdk

./: CLAUDE.md  GitVersion.yml  Makefile  README.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: shared.yml  validate-pr-labels.yaml  validate-pr-title.yaml
cicd/: azure-pipeline-merge.yaml  azure-pipeline-pr.yaml
docs/: CODE_OF_CONDUCT.md  README.md
examples/clients/simple-private-gateway/: README.md  pyproject.toml
examples/clients/simple-private-gateway/mcp_simple_private_gateway/: main.py
examples/clients/simple-streamable-private-gateway/: README.md  pyproject.toml
examples/clients/simple-streamable-private-gateway/mcp_simple_streamable_private_gateway/: main.py
scripts/: Makefile  test  update_readme_snippets.py
src/mcp/cli/: claude.py  cli.py
src/mcp/client/: sse.py
src/mcp/client/stdio/: __init__.py
src/mcp/os/posix/: utilities.py
src/mcp/os/win32/: utilities.py
src/mcp/server/: __main__.py
src/mcp/server/fastmcp/: __init__.py
src/mcp/server/lowlevel/: server.py
tests/cli/: test_utils.py
tests/client/: test_streamable_http_edge_cases.py
tests/issues/: test_1027_win_unreachable_cleanup.py
tests/shared/: test_streamable_http.py
